==============
lxml changelog
==============

Under development
=================

Features added
--------------

* More accurate exception messages in validator creation.

Bugs fixed
----------

* Missing import in ``lxml.html.clean``.

* Some Python 2.4-isms prevented lxml from building/running under
  Python 2.3.

Other changes
-------------

* Exceptions carry only the part of the error log that is related to
  the operation that caused the error.

* ``XMLSchema()`` and ``RelaxNG()`` now enforce passing the source
  file/filename through the ``file`` keyyword argument.

* The test suite now skips most doctests under Python 2.3.

* ``make clean`` no longer removes the .c files (use ``make
  realclean`` instead)


2.0beta1 (2008-01-11)
=====================

Features added
--------------

* Parse-time XML schema validation (``schema`` parser keyword).

* XPath string results of the ``text()`` function and attribute
  selection make their Element container accessible through a
  ``getparent()`` method.  As a side-effect, they are now always
  unicode objects (even ASCII strings).

* ``XSLT`` objects are usable in any thread - at the cost of a deep
  copy if they were not created in that thread.

* Invalid entity names and character references will be rejected by
  the ``Entity()`` factory.

* ``entity.text`` returns the textual representation of the entity,
  e.g. ``&amp;``.

Bugs fixed
----------

* XPath on ElementTrees could crash when selecting the virtual root
  node of the ElementTree.

* Compilation ``--without-threading`` was buggy in alpha5/6.

Other changes
-------------

* Minor performance tweaks for Element instantiation and subelement
  creation


2.0alpha6 (2007-12-19)
======================

Features added
--------------

* New properties ``position`` and ``code`` on ParseError exception (as
  in ET 1.3)

Bugs fixed
----------

* Memory leak in the ``parse()`` function.

* Minor bugs in XSLT error message formatting.
